[package]
name = "power-profile-actions"
edition = "2021"
version = "0.1.0"

[dependencies]
libc = { default-features = false, version = "0.2" }
serde_yaml = "0.9"

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.hashbrown]
version = "0.14"
features = ["serde"]

[dependencies.rustix]
version = "0.38"
features = ["std", "fs"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
opt-level = "z"
lto = true
# codegen-units = 1
